2006-10-14  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (scanBody): Fix and simplify handling
	of SyntaxForm when we need to makeList by asking recursive call
	to make the list. This fixes Savannah bug #17984 "Compile time
	error in expansion of hygienic macros ending in literals".

2006-09-26  Per Bothner  <per@bothner.com>

	* kawa/repl.java (processArgs): If we find a matching propertyField,
	break instead of continue.

2006-09-18  Per Bothner  <per@bothner.com>

	* configure.in (WITH_XQTS): New AM_CONDITIONAL.

2006-09-14  Per Bothner  <per@bothner.com>

	* build.xml (java4-features): Don't use org.w3c.dom.Node by default.

2006-09-13  Per Bothner  <per@bothner.com>

	* Shell.java (xmlPrinterClasses): Update for changed XMLPrinter
	constructors.

	* Shell.java (run): Call flush.

2006-09-12  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite): Som re-arranging.
	If we have a FieldLocation, use it's instance to set contextDecl.
	(checkMemberContext): Inline into caller and remove.

2006-09-08  Per Bothner  <per@bothner.com>

	* Translator.java (reqrite): Catch missing (un-compiled) class when
	loading a field - could be a missing require declaration.

2006-09-06  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java: Remove unused import(s).
	* kawa/standard/try_catch.java: Likewise.
	* kawa/standard/module_static.java: Likewise.
	* kawa/standard/require.java: Likewise.
	* kawa/lang/Translator.java: Likewise.
	* kawa/standard/char_ready_p.java: Likewise.
	* kawa/lang/Translator.java (rewrite): Remove unused local(s).
	* kawa.repl (compileFiles): Likewise.
	* kawa/standard/define_syntax.java (scanForm): Remove unused local.
	* kawa/standard/require.java: Likewise.
	
2006-09-03  Per Bothner  <per@bothner.com>

	* kawa/lang/loadcompiled.java: Remove unused class.
	* kawa/lang/Makefile.am: Update accordingly.
	* kawa/standard/read.java: Removed class, replaced by function read
	in kawa/lib/ports.scm.